# dsktools

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile  README  README.md  TODO  bechmark.txt  common.c  configure.ac  dsk.c  dsk.h  dskmgmt.c  dskread  dskread.c  dskwrite  dskwrite.c
src/: Makefile.am  amsdos.c  amsdos.h  common.c  common.h  dsk.c  dsk.h  dskmgmt.c  dskread.c  dskwrite.c  error.c  error.h  fddriver.h  linux_fddriver.c  log.c  log.h  null_fddriver.c
src/gui/: Makefile.am  app_model.c  app_model.h  callbacks.c  dskgui  dskgui.c  interface.glade
